# dotenvs-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md  env2json.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml  rust.yml
scripts/: env2json.js
spec/: README.md  dotenv  dotenv-node.abnf  dotenv.abnf
src/: constant.rs  dotenv.rs  error.rs  errors.rs  find.rs  iter.rs  lib.rs  parse.rs
src/dotenv/: constant.rs  expand.rs  mod.rs  parse.rs
src/tests/: expand.rs  mod.rs  parse.rs  parse_error.rs
tests/: test-dotenv-find.rs  test-dotenv-iter.rs  test-dotenv-try-next.rs  test-dotenv-var.rs  test-dotenv.rs  test-expand.rs  test-from-filename-iter.rs  test-from-filename.rs  test-from-path-iter.rs  test-from-path.rs  test-load-filename.rs  test-load-path.rs  test-load.rs  test-multiline.rs  test-sample-bad.rs  test-sample-basic.rs  test-sample-bom.rs  test-sample-crlf.rs  test-sample-expand.rs  test-sample-multiline.rs  test-try-from-filename.rs  test-try-from-path.rs  test-try-init.rs  test-var.rs  test-variable-substitution.rs  test-vars.rs
tests/common/: mod.rs  sample.env
tests/fixtures/: README.md  mod.rs  sample-basic.env  sample-basic.json  sample-bom.env  sample-bom.json  sample-crlf.env  sample-crlf.json  sample-expand.env  sample-expand.json  sample-multiline.json
