[package]
name = "dotenvs"
version = "0.1.0"
description = "A correct dotenv library"
repository = "https://github.com/arniu/dotenvs-rs"
homepage = "https://github.com/arniu/dotenvs-rs"
keywords = ["environment", "env", "dotenv", "config"]
include = ["/src", "/tests", "LICENSE.md"]
license = "MIT"
edition = "2021"

[package.metadata.release]
tag-name = "v{{version}}"

[lib]
name = "dotenv"

[dependencies]
winnow = "1.0"

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"
tempfile = "3.0"
