[package]
name = "dotenvs"
version = "0.2.1"
description = "A correct dotenv library"
documentation = "https://docs.rs/dotenvs"
repository = "https://github.com/arniu/dotenvs-rs"
keywords = ["environment", "env", "dotenv", "config"]
categories = ["config"]
rust-version = "1.65"
readme = "README.md"
license = "MIT"
include = ["/src", "/tests", "LICENSE"]
edition = "2021"

[package.metadata.release]
tag-name = "v{{version}}"

[lib]
name = "dotenv"

[dependencies]
winnow = "1.0"

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"
tempfile = "3.0"
